--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,7 +1,15 @@
 .profile {
-  min-height: 286px;
+  
   display: flex;
   align-items: center;
   flex-direction: column;
   padding-top: 42px;
+}
+
+@media (min-width: 1100px) {
+  .profile {
+    flex-direction: row;
+    align-items: flex-start;
+    
+  } 
 }
