--- a/pages/index.css
+++ b/pages/index.css
@@ -5,3 +5,10 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/section/section.css);
+@import url(../blocks/profile/__data/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__job/profile__job.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
