--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -2,4 +2,9 @@
     background: none;
     border: 2px solid #FFFFFF;
     box-sizing: border-box;
+    cursor: pointer;
+}
+
+.button:hover {
+    opacity: 0.6;
 }
