--- a/blocks/places-list/places-list.css
+++ b/blocks/places-list/places-list.css
@@ -1,8 +1,14 @@
 .places-list {
+    padding-top: 36px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));;
-    row-gap: 20px;
-    column-gap: 17px;
-    margin: 0 100px 0 100px;
+    grid-template-columns: repeat(auto-fit, 282px);
+    gap: 20px 17px;
+   justify-content: center;
+}
 
+@media(min-width: 1170px) {
+    .places-list {
+        grid-template-columns: repeat(3, 282px); 
+        padding-top: 48px;
+    }
 }
