--- a/pages/index.css
+++ b/pages/index.css
@@ -13,4 +13,15 @@
 @import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/places-list/places-list.css);
-@import url(../blocks/card-image/card-image.css);
+@import url(../blocks/place-card/place-card.css);
+@import url(../blocks/place-card/__image/place-card__image.css);
+@import url(../blocks/place-card/__description/place-card__description.css);
+@import url(../blocks/place-card/__title/place-card__title.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__button/popup__button.css);
