доделать попап, описать работу попап

--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,6 +2,7 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 900;
+    margin: 25px auto 75px auto;
 }
 
 @media (min-width: 1000px) {
