--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,8 +1,15 @@
 .popup__button {
-    margin: 0 auto;
+   width: 100%;
     font-size: 14px;
     line-height: 17px;
     padding: 14px 82px;
     color: #ffffff;
     background-color: #000000;
+}
+
+@media (min-width: 1000px) {
+    .popup__button {
+      font-size: 14px;
+    line-height: 17px;
+    }
 }
