--- a/pages/index.css
+++ b/pages/index.css
@@ -25,3 +25,5 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/_open/popup_open.css);
+@import url(../blocks/place-card/__like-img/place-card__like-img.css);
