--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,11 +3,11 @@
     display: flex;
     width: 100%;
     padding-top: 28px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 1);
 }
 @media (min-width: 1000px) {
     .header {
-        max-width: calc(100% - 200px*2);
+        max-width: 880px;
         padding-top: 45px;
     }
 }
