--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  
+  max-width: 880px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -8,8 +8,8 @@
 
 @media (min-width: 1100px) {
   .profile {
+    width: 100%;
     flex-direction: row;
-    align-items: flex-start;
-    
+    justify-content: space-between;
   } 
 }
