--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,13 @@
 @import url(../vendor/normalize.css);
-@import url(../vendor/Inter/inter.css);
+@import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/section/section.css);
+@import url(../blocks/section/__profile/section__profile.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__job/profile__job.css);
