--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,15 +1,13 @@
 .profile {
-  max-width: 880px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding-top: 42px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
-@media (min-width: 1100px) {
-  .profile {
-    width: 100%;
+@media (min-width:1000px) {
+   .profile {
     flex-direction: row;
-    justify-content: space-between;
-  } 
+    
+}
 }
