--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,7 +4,7 @@
 
 @media (min-width: 1000px) {
     .footer {
-        width: calc(100% - 200px*2);
+        max-width: 880px;
         margin: 0 auto;
     }
        
