--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -7,6 +7,10 @@
     background-color: #000000;
 }
 
+.popup__button:hover {
+  opacity: 0.8;
+}
+
 @media (min-width: 1000px) {
     .popup__button {
       font-size: 14px;
