--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,16 +1,26 @@
 .popup__close {
     width: 26px;
+    height: 26px;
     position: absolute;
-    top: -40px;
+    top: -30px;
     right: 0;
     cursor: pointer;
     transition: 0.5s;
+    background-image: url(../../../images/Close-icon-small.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    background-color: unset;
+    padding: 0;
 }
 
 @media (min-width: 1000px) {
     .popup__close {
-        top: -26px;
-        right: -26px; 
+        width: 40px;
+        height: 40px;
+        top: -45px;
+        right: -45px; 
+        background-image: url(../../../images/Close-Icon.svg);
     }  
 }
 
