--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,4 @@
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/place-card/__like-img/place-card__like-img.css);
+@import url(../blocks/place-card/__like-img/_like/place-card__like-img_active.css);
