--- a/blocks/place-card/__description/place-card__description.css
+++ b/blocks/place-card/__description/place-card__description.css
@@ -2,5 +2,5 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 30px 0 21px;
+    padding: 0 21px;
 }
