--- a/blocks/place-card/__like-img/place-card__like-img.css
+++ b/blocks/place-card/__like-img/place-card__like-img.css
@@ -8,6 +8,7 @@
     background-position: center;
     background-repeat: no-repeat;
     transition: 0.5s;
+    margin-bottom: 7px;
 }
 
 .place-card__like-img:hover {
