--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -5,6 +5,7 @@
     padding: 14px 82px;
     color: #ffffff;
     background-color: #000000;
+    border: none;
 }
 
 .popup__button:hover {
@@ -13,7 +14,7 @@
 
 @media (min-width: 1000px) {
     .popup__button {
-      font-size: 14px;
-    line-height: 17px;
+      font-size: 18px;
+    line-height: 22px;
     }
 }
