--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,6 +1,6 @@
 .popup__content {
     width: 282px;
-    min-height: 322px;
+    height: 322px;
     background-color: #fff;
     border-radius: 10px;
     position: relative;
@@ -12,7 +12,7 @@
     .popup__content {
         width: 430px;
         min-height: 330px;
-        padding: 34px 36px;  
+        padding: 30px 36px;  
     }
 
 }
