--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -2,12 +2,13 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 900;
-    margin: 25px auto 75px auto;
+    margin: 0 auto 71px auto;
 }
 
 @media (min-width: 1000px) {
     .popup__title {
         font-size: 24px;
         line-height: 29px; 
+        margin: 0 auto 54px auto;
     }
 }
