--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,14 +1,16 @@
 .profile__edit-button {
     min-width: 282px;
     min-height: 50px;
-    color: #FFFFFF;
-    margin-top: 36px;
-    font-size: 30px;
+    background-image: url(../../../images/plus_16x16.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1040px) {
     .profile__edit-button {
         min-width: 150px;
         padding: 0;
+        margin-top: -7px;
+        background-image: url(../../../images/plus_22x22.svg);
     }
 }
