--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,17 +1,21 @@
 .profile__job {
+    max-width: 189px;
     font-size: 14px;
     font-weight: 400;
     line-height: 16.94px;
-    margin: 0 auto;
+    margin: 0 auto 36px auto;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1040px) {
     .profile__job {
+        max-width: 293px;
         font-size: 18px;
         line-height: 21.78px;
         margin: 0;
+        margin-top: -15px;
+        
     }
 }
