--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,16 +1,21 @@
 .profile__name {
+    max-width: 189px;
     font-size: 27px;
     font-weight: 500;
     line-height: 32.68px;
-    margin: 0 auto;
+    margin: 0 auto -5px auto;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1040px) {
     .profile__name {
+        max-width: 293px;
         font-size: 42px;
         line-height: 48px;
+        margin: 0 auto;
+        
     }
 }
