--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,3 +9,13 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+.popup__input:first-child {
+    padding-bottom: 13px;
+    margin-bottom: 28px;
+}
+
+.popup__input:nth-child(2) {
+    padding-bottom: 13px;
+    margin-bottom: 42px;
+}
