--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-    display: none;
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
@@ -8,4 +8,12 @@
     background-color: rgba(0, 0, 0, .5);
     align-items: center;
     justify-content: center;
+    z-index: 1;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+
+.popup:hover {
+    visibility: visible;
+    opacity: 1;
 }
