--- a/pages/index.css
+++ b/pages/index.css
@@ -19,6 +19,7 @@
 @import url(../blocks/place-card/__image/place-card__image.css);
 @import url(../blocks/place-card/__description/place-card__description.css);
 @import url(../blocks/place-card/__title/place-card__title.css);
+@import url(../blocks/place-card/__trash/place-card__trash.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/popup/popup.css);
@@ -30,3 +31,7 @@
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/place-card/__like-img/place-card__like-img.css);
 @import url(../blocks/place-card/__like-img/_active/place-card__like-img_active.css);
+@import url(../blocks/popup/__upper/popup__upper.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__title/__title_image/popup__title_image.css);
