Переименовал файл trash. довавил hover в place-card__trash

--- a/blocks/place-card/__trash/place-card__trash.css
+++ b/blocks/place-card/__trash/place-card__trash.css
@@ -12,3 +12,7 @@ background-image: url(../../../images/trash.svg);
   background-color: transparent;
   transition: opacity 0.9s;
 }
+
+.place-card__trash:hover {
+  opacity: 0.5;
+}
