создал универсальне функции открытия и закрытия попапа, исправил замечания ревьюера

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,9 +11,7 @@
     z-index: 1;
     opacity: 0;
     transition: visibility 0s, opacity 0.5s linear;
+    visibility: hidden;
 }
 
-.popup:hover {
-    visibility: visible;
-    opacity: 1;
-}
+
