--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,4 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__title/__title_image/popup__title_image.css);
+@import url(../blocks/popup/_type/popup_type_edit-profile.css);
