--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__image/__title_image/popup__image_title.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/_open/popup_open.css);
