делаю валидацию форм

--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,5 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__title/__title_image/popup__title_image.css);
 @import url(../blocks/popup/_type/popup_type_edit-profile.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
