--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,18 +8,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    margin-top: 13px;
 }
 
 .popup__input:first-child {
-    padding-bottom: 13px;
-    margin-bottom: 28px;
-}
-
-.popup__input:nth-child(2) {
-    padding-bottom: 13px;
-    margin-bottom: 42px;
-}
-
-.popup__input:invalid {
-    border-bottom: 1px solid #FF0000
+    padding-bottom: 0px;
+    margin-bottom: 0;
 }
