--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,9 +1,21 @@
 .popup__input-error {
-font-family: Inter;
-font-size: 12px;
-font-weight: normal;
-font-weight: 400;
-line-height: 15px;
-color: #FF0000;
-};
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    color: #FF0000;
+    opacity: 0;
+    height: 32px;
+    width: 235px;
+    margin-top: 1px;
+   }
+  
+  
+  
+   @media screen and (min-width: 1280px) {
+    .popup__input-error {
+     width: 361px;
+     font-size: 14px;
+    }
+  }
 
