--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,5 @@
 @import url(../blocks/popup/_type/popup_type_edit-profile.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
