--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,3 +40,5 @@
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
+@import url(../blocks/place-card/__like-info/place-card__like-info.css);
+@import url(..//blocks/place-card/__like-section/place-card__like-section.css);
